--- a/success.html
+++ b/success.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Failure</title>
+        <title>Success</title>
     </head>
     <body>
         <!-- Bootstrap core CSS -->
